features fixing layout issue

--- a/app/sass/_features.scss
+++ b/app/sass/_features.scss
@@ -1,4 +1,5 @@
 .features {
+  margin-top: 5rem;
   @include contentCenter;
   @include contentLeft;
   &__header {
