--- a/app/sass/_hero.scss
+++ b/app/sass/_hero.scss
@@ -22,5 +22,8 @@
       align-self: center;
       margin-left: 3rem;
     }
+    button {
+      margin-top: 1.5rem;
+    }
   }
 }
