--- a/app/sass/main.css
+++ b/app/sass/main.css
@@ -11,6 +11,13 @@ h1 {
           box-sizing: border-box;
 }
 
+@media (min-width: 950px) {
+  header,
+  .features {
+    padding-inline: 4rem;
+  }
+}
+
 body {
   font-size: 1rem;
   line-height: 1.3;
@@ -156,6 +163,10 @@ a {
         align-self: center;
     margin-left: 3rem;
   }
+}
+
+.hero__content button {
+  margin-top: 1.5rem;
 }
 
 .nav {
@@ -367,6 +378,7 @@ a {
 }
 
 .features {
+  margin-top: 5rem;
   text-align: center;
 }
 
